--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -12,7 +12,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Asian/Pacific Islander': 559, 'Black': 19510, 'Native American/Native Alaskan': 326, 'Hispanic': 5634, 'White': 9147}\n"
+      "{'Asian/Pacific Islander': 3.530346230970155, 'Black': 48.471284987180944, 'Native American/Native Alaskan': 8.717729026240365, 'Hispanic': 12.627161104219914, 'White': 4.6356417981453335}\n"
      ]
     }
    ],
@@ -89,7 +89,10 @@
     "        homicide_race_counts[race] += 1\n",
     "# print(homicide_race_counts)\n",
     "\n",
-    "for "
+    "for key, value in homicide_race_counts.items():\n",
+    "    homicide_race_counts[key] = value / population_by_race_dict[key] * 100000\n",
+    "    \n",
+    "print(homicide_race_counts)"
    ]
   },
   {
@@ -100,7 +103,7 @@
     "- Male gun deaths are much higher than female\n",
     "- Number of gun deaths are highest in white, and then black populations\n",
     "- For gun deaths per 100,000 people, Blacks are highest, then Whites\n",
-    "- For homicides, Blacks, Whites, and Hispanics"
+    "- For homicides, Blacks by a wide margin, then Hispanics, Natives, Whites"
    ]
   }
  ],
